Fix odd scrolling on iOS Safari, Admin -> Admins on mobile manage page

--- a/frontend/src/styles/SideNav.css
+++ b/frontend/src/styles/SideNav.css
@@ -1,8 +1,6 @@
 .side_nav_layout {
   display: flex;
   flex-direction: row;
-  background-color: white;
-  height: calc(100vh - 73px);
   /* height: max-content; */
 }
 
